# POOCS

./: README.md
TD_1_lougani_faouzi/TD_1_Lougani_Faouzi/: CMakeLists.txt  main.cpp  test.cpp
TD_1_lougani_faouzi/TD_1_Lougani_Faouzi/mylib/: CMakeLists.txt  mylib.cpp  mylib.h
TD_2_lougani_faouzi/TD_2_Lougani_Faouzi/: CMakeLists.txt  main.cpp  main_functions.h  test.cpp
TD_3_Lougani_Faouzi/: CMakeLists.txt  Particles.h  Simulator.h  SteadySimulator.h  UnsteadySimulator.h  main_TD.cpp
TD_4_Lougani_Faouzi/Instationnaire/: Particles.h  UnsteadySimulator.h  main_TD.cpp
TD_4_Lougani_Faouzi/Stationnaire/: main_TD.cpp
TD_4_Lougani_Faouzi/au_choix/: SteadySimulator.h  main_TD.cpp
TD_4_Lougani_Faouzi/fichiers_resultats/: particle_positions_0.txt  particle_positions_0_4.txt  particle_positions_0_6.txt  particle_positions_0_8.txt  particle_velocities_0.txt  particle_velocities_0_4.txt  particle_velocities_0_6.txt  particle_velocities_0_8.txt
capture_explication/: explication
